set05/problem01_compile_errors.txt
Compilation started at 11/13/2023, 2:44:19 PM
c:\Users\jmgul\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-JatinMGulati\set05\problem01.c:35:1: error: expected identifier or '(' before '{' token
 {
 ^
c:\Users\jmgul\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-JatinMGulati\set05\problem01.c: In function 'output':
c:\Users\jmgul\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-JatinMGulati\set05\problem01.c:41:1: error: expected ';' before '}' token
 }
 ^
Compilation finished at 11/13/2023, 2:44:20 PM
Compilation started at 11/13/2023, 2:45:33 PM
c:\Users\jmgul\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-JatinMGulati\set05\problem01.c:35:1: error: expected identifier or '(' before '{' token
 {
 ^
c:\Users\jmgul\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-JatinMGulati\set05\problem01.c: In function 'output':
c:\Users\jmgul\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-JatinMGulati\set05\problem01.c:41:1: error: expected ';' before '}' token
 }
 ^
Compilation finished at 11/13/2023, 2:45:33 PM
Compilation started at 11/13/2023, 2:46:21 PM
c:\Users\jmgul\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-JatinMGulati\set05\problem01.c:35:1: error: expected identifier or '(' before '{' token
 {
 ^
c:\Users\jmgul\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-JatinMGulati\set05\problem01.c: In function 'output':
c:\Users\jmgul\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-JatinMGulati\set05\problem01.c:41:1: error: expected ';' before '}' token
 }
 ^
Compilation finished at 11/13/2023, 2:46:21 PM
Compilation started at 11/14/2023, 10:07:20 PM
c:\Users\jmgul\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-JatinMGulati\set05\problem01.c:35:1: error: expected identifier or '(' before '{' token
 {
 ^
c:\Users\jmgul\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-JatinMGulati\set05\problem01.c: In function 'output':
c:\Users\jmgul\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-JatinMGulati\set05\problem01.c:41:1: error: expected ';' before '}' token
 }
 ^
Compilation finished at 11/14/2023, 10:07:20 PM
Compilation started at 11/14/2023, 10:08:42 PM
c:\Users\jmgul\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-JatinMGulati\set05\problem01.c:35:1: error: expected identifier or '(' before '{' token
 {
 ^
c:\Users\jmgul\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-JatinMGulati\set05\problem01.c: In function 'output':
c:\Users\jmgul\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-JatinMGulati\set05\problem01.c:41:1: error: expected ';' before '}' token
 }
 ^
Compilation finished at 11/14/2023, 10:08:42 PM
Compilation started at 11/14/2023, 10:09:51 PM
c:\Users\jmgul\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-JatinMGulati\set05\problem01.c:32:1: error: expected identifier or '(' before '{' token
 {
 ^
c:\Users\jmgul\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-JatinMGulati\set05\problem01.c: In function 'output':
c:\Users\jmgul\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-JatinMGulati\set05\problem01.c:38:1: error: expected ';' before '}' token
 }
 ^
Compilation finished at 11/14/2023, 10:09:51 PM
Compilation started at 11/14/2023, 11:15:30 PM
c:\Users\jmgul\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-JatinMGulati\set05\problem01.c:32:1: error: expected identifier or '(' before '{' token
 {
 ^
Compilation finished at 11/14/2023, 11:15:30 PM
Compilation started at 11/14/2023, 11:15:44 PM
c:\Users\jmgul\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-JatinMGulati\set05\problem01.c:32:1: error: expected identifier or '(' before '{' token
 {
 ^
Compilation finished at 11/14/2023, 11:15:44 PM
Compilation started at 11/14/2023, 11:16:34 PM
c:\Users\jmgul\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-JatinMGulati\set05\problem01.c:32:1: error: expected identifier or '(' before '{' token
 {
 ^
Compilation finished at 11/14/2023, 11:16:34 PM
Compilation started at 11/14/2023, 11:16:50 PM
c:\Users\jmgul\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-JatinMGulati\set05\problem01.c:32:1: error: expected identifier or '(' before '{' token
 {
 ^
Compilation finished at 11/14/2023, 11:16:50 PM
